<resources>
    <string name="app_name">Мой Универ</string>

    <!-- login and signup layouts -->
    <string name="email_edit_text">Почта</string>
    <string name="password_edit_text">Пароль</string>
    <string name="username_edit_text">Имя Фамилия</string>
    <string name="group_edit_text">Группа</string>
    <string name="login_button">Войти</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="no_account_text_view">Еще нет аккаунта? Создать.</string>
    <string name="register_title_text_view">РЕГИСТРАЦИЯ АККАУНТА</string>

    <!-- edit text fields -->
    <string name="faculty_edit_text">Факультет</string>
    <string name="website_edit_text">Веб-сайт</string>
    <string name="about_me_edit_text">О себе</string>

    <!-- toolbar -->
    <string name="title">Заголовок</string>

    <!-- toolbar menu -->
    <string name="sign_out">Выйти</string>
    <string name="edit_profile">Редактирование</string>

    <!-- Bottom Navigation View -->
    <string name="news_item">Новости</string>
    <string name="events_item">События</string>
    <string name="tasks_item">Задания</string>
    <string name="more_item"> </string>

    <!-- Navigation View -->
    <string name="chat_item">Чат</string>
    <string name="schedule_item">Расписание</string>
    <string name="mail_item">Почта</string>
    <string name="freelance_item">Фриланс</string>

    <!-- Edit Profile -->
    <string name="change_photo_label">Сменить фото</string>
    <string name="send_button">Отправить</string>

    <!-- Error messages -->
    <string name="empty_field">Это поле не можеть быть пустым</string>
    <string name="small_password">Пароль должен быть длинее 6 символов</string>

    <!-- Spinner's array -->
    <string-array name="gender_array">
        <item>Не указано</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
</resources>
