<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.ramil.myuniversity.model.User"/>
        <variable
            name="handlers"
            type="com.example.ramil.myuniversity.otherviews.EditProfileActivity.EditProfileHandlers"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <include layout="@layout/toolbar_edit_profile"
                android:id="@+id/layout_top"
                bind:handlers="@{handlers}"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_photo_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                bind:src="@tools:sample/avatars[3]"
                bind:imageUrl="@{user.photo}"/>

            <TextView
                android:id="@+id/change_photo_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/change_photo_label"
                android:textColor="@color/link_blue"
                android:onClick="@{handlers::onChangePhotoClicked}"/>

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@={user.username}"
                android:inputType="textNoSuggestions"
                android:hint="@string/username_edit_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                bind:selectedGender="@={user.gender}" />

            <EditText
                android:id="@+id/group_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@={user.group}"
                android:inputType="textNoSuggestions"
                android:hint="@string/group_edit_text"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/faculty_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@={user.faculty}"
                android:inputType="textNoSuggestions"
                android:hint="@string/faculty_edit_text"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/website_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@={user.website}"
                android:inputType="textNoSuggestions"
                android:hint="@string/website_edit_text"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="130dp"
                android:text="@string/about_me_edit_text"/>

            <EditText
                android:id="@+id/about_me_edit_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@={user.aboutme}"
                android:inputType="textMultiLine"
                android:hint="@string/about_me_edit_text"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</layout>